--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "src",
         "geek-learn/src/main/java"
     ],
-    "java.project.outputPath": "bin"
+    "java.project.outputPath": "bin",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
